--- a/contacts.html
+++ b/contacts.html
@@ -9,8 +9,8 @@
         <link href='https://fonts.googleapis.com/css?family=Bona+Nova' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet'>
-        <script type="text/javascript" src="code1.js"></script>
-        <script type="text/javascript" src="code.js"></script>
+        <script type="text/javascript" src="button.js"></script>
+        <script type="text/javascript" src="mob_nav.js"></script>
         <title>Контакты</title>
     </head>
     <body>
