--- a/kinostars.html
+++ b/kinostars.html
@@ -9,8 +9,8 @@
     <link href='https://fonts.googleapis.com/css?family=Bona+Nova' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet'>
-    <script type="text/javascript" src="code1.js"></script>
-    <script type="text/javascript" src="code.js"></script>
+    <script type="text/javascript" src="button.js"></script>
+    <script type="text/javascript" src="mob_nav.js"></script>
     <title>Киногерои</title>
 </head>
 <body>
@@ -92,7 +92,7 @@
             <br><br>
                 Уолтер Уайт со временем изменяется, становясь жёстче и радикальнее в своих методах. Его альтер-эго "Хайзенберга" думает лишь о бизнесе, его расширении и устранении всех угроз, стоящих перед ним. Хайзенбергу нравится заниматься своим делом, несмотря на все риски, и он продолжает, наплевав на всё, что и выделяет его из большинства и позволяет назвать его сигмой.
             <br><br>
-                Роль сыграл Кристиан Бейл.
+                Роль сыграл Брайан Крэнстон.
             </p>
         </div>
         <img src="6.jpg" alt="Главное изображение">
