--- a/sigma.html
+++ b/sigma.html
@@ -8,8 +8,8 @@
         <link rel="icon" type="image/x-icon" href="fav.jpg">
         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet'>
-        <script type="text/javascript" src="code1.js"></script>
-        <script type="text/javascript" src="code.js"></script>
+        <script type="text/javascript" src="button.js"></script>
+        <script type="text/javascript" src="mob_nav.js"></script>
         <title>Тест</title>
     </head>
     <body>
