--- a/kinostars.html
+++ b/kinostars.html
@@ -17,7 +17,7 @@
     <button onclick="top_function()" id="but_up">&#129093;</button>
     <div id="mob_sidepanel" class="sidepanel">
         <a class="closebtn" id ="cl_but" onclick="close_nav()">&times;</a>
-        <a href="main_page.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="kinostars.html">Киногерои</a>
         <a href="sigma.html">Тест</a>
         <a href="gallery.html">Видео</a>
@@ -34,7 +34,7 @@
                 <nav>
                     <div class ="logo">
                         <div style="border-top:1px solid; padding-top: 15px;">
-                            <a class = "but" href="main_page.html">Главная</a>
+                            <a class = "but" href="index.html">Главная</a>
                             <a class = "but" href="kinostars.html">Киногерои</a>
                             <a class = "but" href="sigma.html">Тест</a>
                             <a class = "but" href="gallery.html">Видео</a>
