--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <nav>
                     <div class ="logo">
                         <div style="border-top:1px solid; padding-top: 15px;">
-                            <a class = "but" href="main_page.html">Главная</a>
+                            <a class = "but" href="index.html">Главная</a>
                             <a class = "but" href="kinostars.html">Киногерои</a>
                             <a class = "but" href="sigma.html">Тест</a>
                             <a class = "but" href="gallery.html">Видео</a>
